WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291533
[WebGPU] Selectively emitting bufferLength allows for mismatched bind groups
https://bugs.webkit.org/show_bug.cgi?id=291533
Summary
[WebGPU] Selectively emitting bufferLength allows for mismatched bind groups
Mike Wyrzykowski
Reported
2025-04-14 10:39:38 PDT
[WebGPU] Selectively emitting bufferLength allows for mismatched bind groups
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2025-04-15 11:57:40 PDT
<
rdar://problem/149183515
>
Tadeu Zagallo
Comment 2
2025-04-15 12:06:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44110
EWS
Comment 3
2025-04-16 08:52:19 PDT
Committed
293752@main
(661c534f5553): <
https://commits.webkit.org/293752@main
> Reviewed commits have been landed. Closing PR #44110 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug