[WebGPU] Selectively emitting bufferLength allows for mismatched bind groups https://bugs.webkit.org/show_bug.cgi?id=291533 rdar://149183515

Reviewed by Mike Wyrzykowski.

Automatically generated bind groups can be used in place of other compatible
bind groups of the same pipeline, but to ensure compatibility we must emit all
buffer lengths. To do that we force the generation of all length variables as
long as the buffer isn't an external texture (to match the API behavior) and
the variable associated with the length has been used.

* LayoutTests/fast/webgpu/fuzz-149183515-reduced-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-149183515-reduced.html: Added.
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::collectGlobals):
(WGSL::bindingTypeForPrimitive):
(WGSL::bindingTypeForType):
(WGSL::isExternalTexture):
(WGSL::RewriteGlobalVariables::insertStructs):

Canonical link: https://commits.webkit.org/293752@main